Update and rename scc-signup-tab.html to signup.html

--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@ $(function(){
 
     $("#login-account, #signup-cancel-btn").on("click", function(){
         $("#login-tab").children().remove();
-        $("#login-tab").load("/login-tab/login.html");
+        $("#login-tab").load("/login-tab/");
     });
 
 })();
